styles.css
/* ... */
.creatures .deathwalker-row.friendly img.profile {
    color: var(--deathwalker-color);
}

.creatures .drifter-row.friendly img.profile {
    color: var(--drifter-color);
}

.creatures .elite img.profile {
    color: var(--elite-color);
}

.creatures .friendly img.profile {
    color: var(--friendly-color);
}

.creatures .boneshaper-row.friendly {
    background-color: var(--boneshaper-transperant-color);
}

.creatures .banner-spear-row.friendly {
    background-color: var(--banner-spear-transperant-color);
}

.creatures .snowflake-row.friendly {
    background-color: var(--snowflake-transparent-color);
}

.creatures .drifter-row.friendly {
    background-color: var(--drifter-transperant-color);
}


.creatures .deathwalker-row.friendly {
    background-color: var(--deathwalker-transperant-color);
}

.creatures .elite-row {
    background-color: var(--elite-transperant-color);
}


.creatures .nonelite-row {
    background-color: var(--nonelite-transperant-color);
}

.creatures .friendly-row.friendly {
    background-color: var(--friendly-transperant-color);
}

.creatures .creature-column .nameplate input {
    color: white;
    background: none;
    font-size: 25px;
    font-weight: 800;
    width: 50px;
    padding: 0;
    margin: 0px;
}

.initiative-column {
    display: flex;
    align-items: center;
}

.initiative-column.hidden {
    visibility: hidden;
}

.initiative-column.hidden+.nameplate img.profile {
    cursor: inherit;
}

.attack-btn.hidden {
    visibility: hidden;
}

.stats {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    padding: 0px 10px;
    width: 90px;
}

.stats .stat-child {
    position: relative;
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 0px 10px;
    flex: 1 0 20%;
    margin-top: 8px;
}

.stats .stat-child object {
    width: var(--stats-icons-size);
    height: var(--stats-icons-size);
}

.action-buttons {
    display: flex;
    flex-direction: column;
    align-items: center;
}

button {
    padding: 10px 15px;
    background-color: #445566;
    border: none;
    cursor: pointer;
    transition: background-color 0.2s ease, transform 0.1s ease;
}

button:hover {
    background-color: #56677A;
    transform: scale(1.02);
}

.attack-btn {
    vertical-align: middle;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 50px;
    height: 50px;
    cursor: pointer;
    background: #a94949;
    border: 3px solid #902a2a;
    margin-top: 15px;
}

.attack-btn button {
    background: none;
}

.attack-btn button img {
    height: 30px;
    width: 30px;
    background: #a94949;
    padding: 5px;
    border: 3px solid #902a2a;
}

.remove-btn {
    font-size: 18px;
    font-weight: normal;
    color: #999;
    background-color: transparent;
    display: inline-block;
    text-align: center;
    margin-top: 5px;
    width: 50px;
    transition: none;
}

.remove-btn:hover {
    background-color: #ff0000;
    color: white;
}

#elite-monster {
    margin-top: 15px;
}

div#modal-attack,
div#modal-conditions {
    display: none;
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

#attack-conditions {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    text-align: center;
    border-top: 1px solid white;
}


#attack-conditions img {
    margin-right: 14px;
}

#attack-conditions p {
    margin-right: 4px;
}

.attack-modal {
    display: none;
    position: fixed;
    z-index: 100;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
}

.modal-content {
    background-color: #3A3A3A;
    margin: 15% auto;
    padding: 25px;
    border: 1px solid #888;
    text-align: center;
    z-index: 101;
}

.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
    margin-top: -14px;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

.icons {
    display: flex;
    justify-content: space-around;
    margin-top: 20px;
}

.icon {
    text-align: center;
}

.icon img {
    width: 50px;
    height: 50px;
}

.icon p {
    margin-top: 5px;
}

.hp {
    background-color: #4CAF50;
}

.attack {
    background-color: #E57373;
}

.movement {
    background-color: #8E44AD;
}

.range {
    background-color: #F1C40F;
}

.add-char {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    gap: 100px;
}

.add-char .row {
    display: flex;
    flex-direction: column;
    position: relative;
}

.add-char,
.row,
.default-stats {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
}

.add-char .row .default-stats.type-buttons {
    position: absolute;
    bottom: 0;
}

.row .row-monster-stats {
    flex-wrap: wrap;
    flex-direction: row;
    gap: 1rem;
}

.row-monster-stats .default-stats {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.row-monster-stats .default-stats label {
    margin-bottom: -14px;
}

.tombstone-icon {
    margin-left: 120px;
    width: 50px;
    cursor: pointer;
}

.tombstone-icon:hover {
    transform: scale(1.1);
}

.tombstone-icon.hidden {
    display: none;
}

.row.middle-line {
    border: 1px solid white;
}

select {
    font-size: 18px;
    color: #F0F0F0;
    background-color: #445566;
    border: none;
    padding: 10px;
    outline: none;
}

option {
    font-size: 18px;
    color: #F0F0F0;
    background-color: #445566;
    border: none;
}

.flipped-image {
    transform: scaleX(-1);
}

/* #battle-log::-webkit-scrollbar {
    display: none;
} */

.log-time {
    font-weight: bold;
    margin-right: 5px;
}

.log-event,
.log-time {
    color: #999;
}

.log-bold {
    color: #F0F0F0;
}

.log-img {
    width: 25px;
    height: auto;
}

.technical-log {
    font-size: 14px;
    font-style: italic;
}
/* ... */

